--- a/settimana1/day2/index.html
+++ b/settimana1/day2/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Primi passi operativi per creare un modello di pagina HTML per un post. Scopri come iniziare in modo facile.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assetts/EPICODE-pitto-color.png">
     <title>Sviluppo di una pagina web - Blog Epicode</title>
 </head>
 <body>
