Progetto day2 - Corso EPICODE

--- a/settimana1/day2_28_03_23/index.html
+++ b/settimana1/day2_28_03_23/index.html
@@ -26,7 +26,7 @@
             <section id="epicode_articoli">
                 <article id="articolo1">
                     <h2>Come creare un template per i post</h2>
-                    <cite>di Mario Rossi - pubblicato il 25-10-2020</cite>
+                    <p>di Mario Rossi - pubblicato il 25-10-2020</p>
                     <p>
                         La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <b>parti comuni</b> da applicare a tutte le pagine<br><br>Le varie aree saranno quindi suddivise in:
                         <ul>
@@ -57,28 +57,28 @@
                         <tbody>
                             <tr>
                                 <td>2000</td>
-                                <td>20%</td>
-                                <td>17%</td>
+                                <td>20&percnt;</td>
+                                <td>17&percnt;</td>
                             </tr>
                             <tr>
                                 <td>2002</td>
-                                <td>35%</td>
-                                <td>22%</td>
+                                <td>35&percnt;</td>
+                                <td>22&percnt;</td>
                             </tr>
                             <tr>
                                 <td>2004</td>
-                                <td>45%</td>
-                                <td>42$</td>
+                                <td>45&percnt;</td>
+                                <td>42&percnt;</td>
                             </tr>
                             <tr>
                                 <td>2008</td>
-                                <td>80%</td>
-                                <td>51%</td>
+                                <td>80&percnt;</td>
+                                <td>51&percnt;</td>
                             </tr>
                              <tr>
                                 <td>2012</td>
-                                <td>100%</td>
-                                <td>76%</td>
+                                <td>100&percnt;</td>
+                                <td>76&percnt;</td>
                             </tr>
                         </tbody>
                     </table>
