Progetto day2 - Corso EPICODE

--- a/settimana1/day2_28_03_23/index.html
+++ b/settimana1/day2_28_03_23/index.html
@@ -97,7 +97,7 @@
                     <form action="" method="post">
                         <fieldset>
                             <input type="email" id="mail_utente" name="mail_utente" placeholder="inserisci l'email">
-                            <button type="submit">Iscriviti!</button>
+                            <button type="submit" id="invia">Iscriviti!</button>
                         </fieldset>
                     </form>
                 </div>
