--- a/settimana1/day3_29_03_23/index.html
+++ b/settimana1/day3_29_03_23/index.html
@@ -4,10 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assetts/style.css">
-    <title>Document</title>
+    <link rel="icon" href="assetts/img/favi.png">
+    <link rel="stylesheet" href="assetts/css/style.css">
+    <title>Simply Recipse - Thanksgiving Focaccia</title>
 </head>
 <body>
-    
+    <header>
+        <div id="main_logo">
+            <img src="assetts/img/logo.png" alt="main_logo" width="200px">
+        </div>
+        <div id="subtitle">
+             <p>Part of <strong>A SIMPLY FABULOUS THANKSGIVING</strong></p>
+        </div>
+    </header>
+    <div id="container">
+        <section id="recipe">
+            <div id="title">
+                <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
+                <p id="description">Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart cranberries, and creamy brie. It will become your new favorite holiday starter!</p>
+            </div>
+            <div id="video">
+                <video poster="assetts/img/focaccia.png" width="720px" height="480" controls>
+                    <source src="assetts/video/brotsky-bakery.mp4" type="video/mp4">
+                </video>
+                <p>Image: Sally Vegas</p>
+            </div>
+            <div id="extra">
+                <p>FEATURED IN:</p>
+                <a href="javascript:void(0)">Fresh Cranberry Recipes That Go Beyond Sauce</a>
+            </div>
+            <br>
+            <br>
+            <div id="ingredients">
+                <h2>Ingredients</h2>
+                <hr>
+                <p><b>For the focaccia:</b></p>
+                <ul id="focaccia_ingredients">
+                    <li>4 cups (500g) all-purpose flour</li>
+                    <li>1 1/2 teaspoons instant yeast</li>
+                    <li>1 1/2 teaspoons salt</li>
+                    <li>1 3/4 cups (350g) lukewarm water</li>
+                    <li>1/4 cup extra virgin olive oil, plus more for the pan</li>
+                </ul>
+                <p><b>For the topping:</b></p>
+                <ul id="toppings">
+                    <li>3 medium yellow onions, thinly sliced</li>
+                    <li>1 tablespoon balsamic vinegar</li>
+                    <li>1-2 tablespoons olive oil, for brushing on top</li>
+                    <li>10 ounces brie, cut into cubes (scrape rind off with a paring knife if desired, though it’s not necessary)</li>
+                    <li>1 1/2 cups fresh or frozen cranberries</li>
+                </ul>
+            </div>
+            <div id="method">
+                <h2>Method</h2>
+                <hr>
+                <ol id="met">
+                    <li><b>Make the focaccia dough</b></li>
+                    <p>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the dough ingredients until the flour is fully absorbed. You don't need to actually knead the dough, though I sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...</p>
+                </ol>
+            </div>
+            <div id="read_more">
+                <p>Read more on <a href="https://www.simplyrecipes.com/recipes/focaccia_with_caramelized_onions_cranberries_and_brie/">Simply recipes</a></p>
+            </div>
+            <div id="lesson">
+                <h2>Reserve a FOCACCIA lesson</h2>
+                <hr>
+                <form action="javascript:void(0);" method="post">
+                    <label for="student">Nome studente</label><br>
+                    <input type="text" id="student" name="student">
+                    <br><br>
+                    <label for="date">Data lezione</label><br>
+                    <input type="date" id="date" name="date">
+                    <br><br>
+                    <label for="chef">Scegliere chef/insegnante</label><br>
+                    <select name="chef" id="chef">
+                        <option value=""></option>
+                        <option value="dario">Dario Del Giudice</option>
+                        <option value="manuel">Manuel Centini</option>
+                        <option value="chiara">Chiara Presaghi</option>
+                    </select>
+                    <br><br>
+                    <button type="submit" id="invia">Prenota!</button>
+                </form>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
