--- a/settimana1/day3_29_03_23/index.html
+++ b/settimana1/day3_29_03_23/index.html
@@ -60,8 +60,10 @@
                     <h2>Method</h2>
                     <hr>
                     <ol id="met">
-                        <li><b>Make the focaccia dough</b></li>
-                        <p>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the dough ingredients until the flour is fully absorbed. You don't need to actually knead the dough, though I sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...</p>
+                        <li>
+                            <b>Make the focaccia dough</b>
+                            <p>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the dough ingredients until the flour is fully absorbed. You don't need to actually knead the dough, though I sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...</p>
+                        </li>                        
                     </ol>
                 </div>
                 <div id="read_more">
