--- a/EserciziSettimana01/day4_30_03_23/index.html
+++ b/EserciziSettimana01/day4_30_03_23/index.html
@@ -17,9 +17,9 @@
             <h3>Epicode - Il blog dei developers</h3>
             <nav id="navigation_bar">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#epicode_articoli">Articoli</a></li>
-                    <li><a href="#correlati">Lavora con noi</a></li>
+                    <li><a href="#"><i class="far fa-star"></i>Home</a></li>
+                    <li><a href="#epicode_articoli"><i class="far fa-star"></i>Articoli</a></li>
+                    <li><a href="#correlati"><i class="far fa-star"></i>Lavora con noi</a></li>
                 </ul>
             </nav>
         </header>
@@ -28,7 +28,7 @@
             <section id="epicode_articoli">
                 <article id="articolo1">
                     <h2 id="titolo">Come creare un template per i post</h2>
-                    <p id="autore">di Mario Rossi - pubblicato il 25-10-2020</p>
+                    <p id="autore"><i class="fas fa-pen"></i> di Mario Rossi - <i class="fas fa-clock"></i> pubblicato il 25-10-2020</p>
                     <div id="corpo_atricolo1">
                         <p>
                             La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <span class="important">parti comuni</span> da applicare a tutte le pagine<br><br>Le varie aree saranno quindi suddivise in:
@@ -110,23 +110,23 @@
                 <div class="correlato">
                     <p>
                         <a href="javascript:void(0)">Validare il codice HTML</a><br>
-                        Categoria: develop<br>
+                        <i class="fas fa-tag"></i> Categoria: develop<br>
                     </p>
-                    <div class="date">Data: 18-9-2020</div> 
+                    <div class="date"><i class="fas fa-calendar-alt"></i> Data: 18-9-2020</div> 
                 </div>
                 <div class="correlato">
                     <p>
                         <a href="javascript:void(0)">Correggere la sintassi</a><br>
-                        Categoria: develop<br>
+                        <i class="fas fa-tag"></i> Categoria: develop<br>
                     </p>
-                    <div class="date">Data: 16-9-2020</div> 
+                    <div class="date"><i class="fas fa-calendar-alt"></i> Data: 16-9-2020</div> 
                 </div>
                 <div class="correlato">
                     <p>
                         <a href="javascript:void(0)">Meno Kb nella pagina</a><br>
-                        Categoria: ottimizzazione<br>
-                    </p>
-                    <div class="date">Data: 30-9-2020</div>
+                        <i class="fas fa-tag"></i> Categoria: ottimizzazione<br>
+                    </p> 
+                    <div class="date"><i class="fas fa-calendar-alt"></i> Data: 30-9-2020</div>
                 </div>
             </aside>    
         </main>
