--- a/EserciziSettimana01/ProgettoSettimana1_31_03_23/index.html
+++ b/EserciziSettimana01/ProgettoSettimana1_31_03_23/index.html
@@ -4,50 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="assetts/img/EPICODE-pitto-color.png">
     <link rel="stylesheet" href="assetts/css/style.css">
     <title>Corso Web Developer - Epicode school</title>
 </head>
+
+
 <body>
     <header>
-        <div id="logo">
-            <img src="assetts/img/logo.png" alt="logo_epicode_school">
+        <div id="box_logo">
+            <img id="logo" src="assetts/img/logo.png" alt="logo_epicode_school">
         </div>
     </header>
     <main>
         <!-- il div "container" mi permette di lasciare intoccato il main 
         I vari div "box_x" permettono lo stesso risultato: giocare con essi mantenendo intoccate le proporzioni delle varie section. Tradotto possiamo modificare e "sbagliare" con i singoli elementi senza intaccare la struttura generale della pagina
         -->
-        <div id="contaier">
+        <div id="container">
             <section id="intro">
                 <div id="box_intro">
                     <article id="descrizione">
-                        <h1>Corso Web Developer</h1>
+                        <h1 class="blue_titles">Corso Web Developer</h1>
                         <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
                     </article>
                     <article id="partiamo">
-                        <a href="">PARTIAMO!</a>
+                        <a id="fake_button" href="#contatti">PARTIAMO!</a>
                     </article>
                 </div>                
             </section>
             <section id="informativa">
                 <div id="box_informativa">
                     <article id="info1">
-                        <h2>Tutti ti cercheranno</h2>
-                        <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
+                        <h3 class="blue_titles">Tutti ti cercheranno</h3>
+                        <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più</p>
                     </article>
                     <article id="info2">
-                        <h2>Lavora dove vuoi</h2>
-                        <p>Lavora da casa, in riva al mare o in montagna.</p>
+                        <h3 class="blue_titles">Lavora dove vuoi</h3>
+                        <p>Lavora da casa, in riva al mare o in montagna</p>
                     </article>
-                    <!-- immagine -->
+                    <article id="immagine_informativa">
+                        <img src="assetts/img/notebook.jpg" alt="pc_aperto_con_codice">
+                    </article>
                     <article id="info3">
-                        <h2>Scegli il tuo ruolo</h2>
-                        <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
+                        <h3 class="blue_titles">Scegli il tuo ruolo</h3>
+                        <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
                     </article>
                     <article id="info4">
-                        <h2>Lavoro in libertà</h2>
-                        <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
+                        <h3 class="blue_titles">Lavoro in libertà</h3>
+                        <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
                     </article>
                 </div>
             </section>
@@ -56,23 +61,32 @@
                     <h2>Epicode garantisce</h2>
                     <!-- utilizzo il tag p con id specifico, in quanto il tag q mette << >>, invece di " " -->
                     <p id="quote">"3 mesi intensivi di corso che cambieranno radicalmente la tua vita"</p>
-                    <pre id="autore">Mario Rossi
-CEO, Epicode</pre>
+                    <p id="autore">Mario Rossi</p>
+                    <p id="azienda">CEO, Epicode</p>
                 </div>
             </section>
             <section id="info_cards">
                 <div id="box_info_cards">
                     <article id="tuo_pc">
-                        <h3>Il tuo PC</h3>
-                        <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
+                        <div class="card" id="box_tuo_pc">
+                            <img src="assetts/img/foto1.jpg" alt="pc_on_desk">
+                            <h3 class="blue_titles">Il tuo PC</h3>
+                            <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
+                        </div>
                     </article>
                     <article id="impara_ora">
-                        <h3>Impara ora</h3>
-                        <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+                        <div class="card" id="box_impara_ora">
+                            <img src="assetts/img/foto2.jpg" alt="pc_closed_with_lights">
+                            <h3 class="blue_titles">Impara ora</h3>
+                            <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+                        </div>                        
                     </article>
                     <article id="lavora_subito">
-                        <h3>Lavora subito</h3>
-                        <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+                        <div class="card" id="box_lavora_subito">
+                            <img src="assetts/img/foto3.jpg" alt="meeting">
+                            <h3 class="blue_titles">Lavora subito</h3>
+                            <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+                        </div>
                     </article>
                 </div>
             </section>
@@ -82,14 +96,14 @@ CEO, Epicode</pre>
         <section id="contatti">
             <div id="box_contatti">
                 <h2>Contattaci</h2>
-                <p>(+39) 11223456</p>
-                <p>info@epicode.school</p>
-                <p>Via Appia 1 - 00100 Roma (RM)</p>
+                <p><i class="fa-solid fa-square-phone" style="color: #ffffff;"></i> <a href="tel:+3911223456" title="Chiamaci ora!">(+39) 11223456</a></p>
+                <p><i class="fa-solid fa-square-envelope" style="color: #ffffff;"></i> <a href="mailto:info@epicode.school" title="Inviaci una mail"> info@epicode.school</a></p>
+                <p><i class="fa-solid fa-square-up-right" style="color: #ffffff;"></i> Via Appia 1 - 00100 Roma (RM)</p>
             </div>
         </section>
         <section id="credits">
             <div id="box_credits">
-                <p>&#169; 2021. Immagini di Pixabay</p>
+                <p>&#169; 2021. Immagini di <a href="https://pixabay.com/it/" title="Catalogo esterno di immagini">Pixabay</a></p>
             </div>
         </section>
     </footer>
