--- a/EserciziSettimana01/ProgettoSettimana1_31_03_23/index-desktop.html
+++ b/EserciziSettimana01/ProgettoSettimana1_31_03_23/index-desktop.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="assetts/img/EPICODE-pitto-color.png">
-    <link rel="stylesheet" href="assetts/css/style.css">
+    <link rel="stylesheet" href="assetts/css/style-desktop.css">
     <title>Corso Web Developer - Epicode school</title>
 </head>
 
