aggiunta esercizio desktop

--- a/EserciziSettimana01/ProgettoSettimana1_31_03_23/index-desktop.html
+++ b/EserciziSettimana01/ProgettoSettimana1_31_03_23/index-desktop.html
@@ -36,25 +36,27 @@
             </section>
             <section id="informativa">
                 <div id="box_informativa">
-                    <article id="info1">
-                        <h3 class="blue_titles">Tutti ti cercheranno</h3>
-                        <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più</p>
-                    </article>
-                    <article id="info2">
-                        <h3 class="blue_titles">Lavora dove vuoi</h3>
-                        <p>Lavora da casa, in riva al mare o in montagna</p>
-                    </article>
                     <article id="immagine_informativa">
                         <img src="assetts/img/notebook.jpg" alt="pc_aperto_con_codice">
                     </article>
-                    <article id="info3">
-                        <h3 class="blue_titles">Scegli il tuo ruolo</h3>
-                        <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
-                    </article>
-                    <article id="info4">
-                        <h3 class="blue_titles">Lavoro in libertà</h3>
-                        <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
-                    </article>
+                    <div id="articoli">
+                        <article id="info1">
+                            <h3 class="blue_titles">Tutti ti cercheranno</h3>
+                            <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più</p>
+                        </article>
+                        <article id="info2">
+                            <h3 class="blue_titles">Lavora dove vuoi</h3>
+                            <p>Lavora da casa, in riva al mare o in montagna</p>
+                        </article>
+                        <article id="info3">
+                            <h3 class="blue_titles">Scegli il tuo ruolo</h3>
+                            <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
+                        </article>
+                        <article id="info4">
+                            <h3 class="blue_titles">Lavoro in libertà</h3>
+                            <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
+                        </article>
+                    </div>
                 </div>
             </section>
             <section id="quotes">
@@ -97,9 +99,12 @@
         <section id="contatti">
             <div id="box_contatti">
                 <h2>Contattaci</h2>
-                <p><i class="fa-solid fa-square-phone" style="color: #ffffff;"></i> <a href="tel:+3911223456" title="Chiamaci ora!">(+39) 11223456</a></p>
-                <p><i class="fa-solid fa-square-envelope" style="color: #ffffff;"></i> <a href="mailto:info@epicode.school" title="Inviaci una mail"> info@epicode.school</a></p>
-                <p><i class="fa-solid fa-square-up-right" style="color: #ffffff;"></i> Via Appia 1 - 00100 Roma (RM)</p>
+                <div id="elenco">
+                    <p><i class="fa-solid fa-square-phone" style="color: #ffffff;"></i> <a href="tel:+3911223456" title="Chiamaci ora!">(+39) 11223456</a></p>
+                    <p><i class="fa-solid fa-square-envelope" style="color: #ffffff;"></i> <a href="mailto:info@epicode.school" title="Inviaci una mail"> info@epicode.school</a></p>
+                    <p><i class="fa-solid fa-square-up-right" style="color: #ffffff;"></i> Via Appia 1 - 00100 Roma (RM)</p>
+                </div>
+                
             </div>
         </section>
         <section id="credits">
