--- a/EserciziSettimana02/day01_03_04_23/index.html
+++ b/EserciziSettimana02/day01_03_04_23/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/img/JavaScript-logo.png">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Esercizio day1 - Pagina 1</title>
 </head>
 <body>
-    
-    <script src="assets/js/script.js"></script>
+    <header>
+        <section id="titolo_pagina1">
+            <h1>Benvenuto / Benvenuta</h1>
+            <p>Facciamo un pò di pratica con JavaScript</p>
+        </section>        
+    </header>
+    <main>
+        <div id="container_pagina1">
+            <section id="lista">
+                <h2>In questa lezione pratica faremo:</h2>
+                <ul id="lista_js">
+                    <li>Esercizi di integrazione dal file JS in progetti HTML</li>
+                    <li>Esercizi sul corretto naming</li>
+                    <li>Esercizi con le direttive di output</li>
+                </ul>
+            </section>
+            <section id="image_link_pagina2">
+                <a class="link_alle_pagine" id="link_pagina2" href="seconda.html">
+                    <img id="logo_javascript" src="assets/img/JavaScript-logo.png" alt="logo_javascript"><br>
+                    Vai all'altra Pagina
+                </a>            
+            </section>
+        </div>
+    </main>
 </body>
 </html>
