--- a/EserciziSettimana02/day01_03_04_23/index.html
+++ b/EserciziSettimana02/day01_03_04_23/index.html
@@ -27,7 +27,7 @@
             </section>
             <section id="image_link_pagina2">
                 <a class="link_alle_pagine" id="link_pagina2" href="seconda.html">
-                    <img id="logo_javascript" src="assets/img/JavaScript-logo.png" alt="logo_javascript"><br>
+                    <img id="logo_javascript" src="assets/img/JavaScript-logo.png" alt="logo_javascript" title="vai a pagina 2"><br>
                     Vai all'altra Pagina
                 </a>            
             </section>
