--- a/EserciziSettimana02/day02_04_04_23 /index.html
+++ b/EserciziSettimana02/day02_04_04_23 /index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Esercizio day2</title>
 </head>
 <body>
     
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
