--- a/EserciziSettimana02/day04_06_04_23/index.html
+++ b/EserciziSettimana02/day04_06_04_23/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esercizio day3</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Esercizio day4</title>
 </head>
 <body>
    
+    
     <script src="assets/js/script.js"></script>
 </body>
 </html>
