--- a/EserciziSettimana03/day03_13_04_23/D8.html
+++ b/EserciziSettimana03/day03_13_04_23/D8.html
@@ -243,8 +243,8 @@
     */
 
     const addRow = function (img, prod, quant, prz) {
+      let trow = document.createElement('tr')
 
-      
     }
 
     addRow('https://m.media-amazon.com/images/I/81yJf4K+L1L._AC_SY450_.jpg', 'Smarthphone', 20, '200 €')
