aggiornamento welcome html + javascript

--- a/BuildWeek1/wecolme.html
+++ b/BuildWeek1/wecolme.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     
+    <a href="question.html"><button id="proceedButton" type="button">Procedi</button></a> 
+ 
     <script src="assets/js/welcomeScript.js"></script>
 </body>
 </html>
