--- a/BuildWeek1/wecolme.html
+++ b/BuildWeek1/wecolme.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,46 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Welcome</title>
 </head>
+
 <body>
-    
-    <a href="question.html"><button id="proceedButton" type="button">Procedi</button></a> 
- 
+    <!-- Header -->
+    <header>
+        <img id="logoEpicode" src="assets/img/epicode_logo.png">
+    </header>
+    <!-- Main -->
+    <main>
+        <!-- COntainer -->
+        <div id="welcomeContainer" class="container">
+            <!-- Istructions -->
+            <h1>Welcome to<br><b>your exam</b></h1>
+            <section id="instructions">
+                <h2 id="istructionsTitle" class="purple">Instructions</h2>
+                <p id="istructionsPar">We don't expect most engineers to know the answers to all of these<br>questions,
+                    so don't worry if you're unsure of a few of them</p>
+                <ul id="istructionList">
+                    <li>Each question is <b>time </b>and can only be <b>answered once.</b></li>
+                    <li>Changing browser tab or opening other windows will <b>invalidate the question.</b></li>
+                    <li>This exam will take approx. <b>0-5 minutes.</b></li>
+                </ul>
+            </section>
+            <!-- Bottom Box-->
+            <section id="bottomBox">
+                <div id="formCheck">
+                    <select id="selectDifficult" name="difficult">
+                        <option value=""></option>
+                        <option value="easy">Easy</option>
+                        <option value="Hard">Hard</option>
+                    </select>
+                    <input type="checkbox" id="terms">I promise to answer myself without help from anyone
+                </div>
+                <div id="boxButton">
+                    <a href="question.html"><button id="proceedButton" type="button"
+                            class="blueButton">Proceed</button></a>
+                </div>
+            </section>
+        </div>
+    </main>
     <script src="assets/js/welcomeScript.js"></script>
 </body>
+
 </html>
