update struttura html

--- a/BuildWeek1/question.html
+++ b/BuildWeek1/question.html
@@ -44,7 +44,7 @@
             </div>
             <!-- Question Tracker -->
             <div>
-                <h3 id="questionNumber" class="blueButton">QUESTION <span id="number">1</span><span class="purple"> / 10</span></h3> 
+                <h3 id="questionNumber">QUESTION <span id="number">1</span><span class="purple"> / 10</span></h3> 
             </div>
         </div>
     </main>
