--- a/BuildWeek1/result.html
+++ b/BuildWeek1/result.html
@@ -42,7 +42,7 @@
             </div>
             <!-- Bottom -->
             <div>
-                <a href="javascript:void(0)"></a><button id="rateUs">RATE US</button></a>
+                <a href="review.html"><button id="rateUs">RATE US</button></a>
             </div>
         </div>
     </main>
