upddate question.js

--- a/BuildWeek1/question.html
+++ b/BuildWeek1/question.html
@@ -30,7 +30,7 @@
         <!-- Container -->
         <div id="questionContainer" class="container">
             <!-- Question -->
-            <h1 id="question">How can I create acheckbox in HTML?</h1>
+            <h1 id="question"></h1>
             <!-- Answers -->
             <div id="answers">
                 <input type="button" name="answer" id="answer1"></input>
@@ -44,7 +44,7 @@
             </div>
             <!-- Question Tracker -->
             <div>
-                <h3 id="questionNumber">QUESTION <span id="number">1</span><span class="purple"> / 10</span></h3> 
+                <h3 id="questionNumber">QUESTION <span id="number"></span> / <span id="questionLength" class="purple"></span></h3> 
             </div>
         </div>
     </main>
