update welcome javascript - blocco e sblocco btn

--- a/BuildWeek1/welcome.html
+++ b/BuildWeek1/welcome.html
@@ -39,7 +39,8 @@
                         <option value=""></option>
                         <option value="easy">Easy</option>
                         <option value="Hard">Hard</option>
-                    </select>
+                    </select><br>
+                    <!-- Checkbox terms -->
                     <input type="checkbox" id="terms">I promise to answer myself without help from anyone
                 </div>
                 <!-- Button Proceed -->
