--- a/BuildWeek1/question.html
+++ b/BuildWeek1/question.html
@@ -10,25 +10,25 @@
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <!-- Logo -->
-        <img id="logoEpicode" alt="logo_epicode" src="assets/img/epicode_logo.png">
-        <!-- Timer -->
-        <div id="timer">
-            <div id="timerCircle">
-                <div id="innerCircle">
-                    <p>SECONDS</p>
-                    <p id="seconds">30</p>
-                    <p>REMAINING</p>
+    <!-- Container -->
+    <div id="questionContainer" class="container">
+        <!-- Header -->
+        <header>
+            <!-- Logo -->
+            <img id="logoEpicode" alt="logo_epicode" src="assets/img/epicode_logo.png">
+            <!-- Timer -->
+            <div id="timer">
+                <div id="timerCircle">
+                    <div id="innerCircle">
+                        <p>SECONDS</p>
+                        <p id="seconds">30</p>
+                        <p>REMAINING</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <!-- Main -->
-    <main>
-        <!-- Container -->
-        <div id="questionContainer" class="container">
+        </header>
+        <!-- Main -->
+        <main>
             <!-- Question -->
             <h1 id="question"></h1>
             <!-- Answers -->
@@ -44,11 +44,11 @@
             </div>
             <!-- Question Tracker -->
             <div>
-                <h3 id="questionNumber">QUESTION <span id="number"></span> / <span id="questionLength" class="purple"></span></h3> 
+                <h3 id="questionNumber">QUESTION <span id="number"></span> / <span id="questionLength"
+                        class="purple"></span></h3>
             </div>
-        </div>
-    </main>
-
+        </main>
+    </div>
     <script src="assets/js/questionScript.js"></script>
 </body>
 
