--- a/BuildWeek1/result.html
+++ b/BuildWeek1/result.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="resultsContainer" class="container"></div>
+    <div id="resultsContainer" class="container">
         <!-- Header -->
         <header>
             <img id="logoEpicode" alt="logo_epicode" src="assets/img/epicode_logo.png">
