--- a/BuildWeek1/result.html
+++ b/BuildWeek1/result.html
@@ -23,7 +23,7 @@
                 <h2>The summary of your answers:</h2>
             </div>
             <!-- Result Container -->
-            <div id="resultContainer">
+            <div id="resultBox">
                 <!-- Correct Answers  -->
                 <div id="correctAnswers" class="glow">
                     <h2>Correct</h2>
@@ -49,6 +49,7 @@
             </div>
         </main>
     </div>
+
     <script src="assets/js/resultScript.js"></script>
 </body>
 
